# best-first-robot-navigation

./: .gitignore  AEuclideanFringe.cpp  AEuclideanFringe.h  AManhattanFringe.cpp  AManhattanFringe.h  CMakeLists.txt  EuclideanFringe.cpp  EuclideanFringe.h  Fringe.h  GridMap.cpp  GridMap.h  Makefile  ManhattanFringe.cpp  ManhattanFringe.h  Node.h  NodeType.h  Parser.cpp  Parser.h  README.md  checkCases.py  genGrid.py  generatingScript.sh  linsteadOut.txt  main.cpp  noPath.txt  sample10.txt  sample15.txt  sample30.txt  sample80.txt  sampleFile.txt
